bak/traefik-middleware-redirect-schema.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "9443"
