bak/ingress-k8s-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k8s-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    # traefik.ingress.kubernetes.io/redirect-entry-point: https
    # cert-manager.io/issuer: letsencrypt-production
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    # traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare

spec:
  tls: 
  - hosts:
    - env0.luojm.com
    secretName: ingress-cert-env0
  rules:
  - host: env0.luojm.com
    http:
      paths:
      - path: /k8sdash
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
  # - host: 192-168-1-201.nip.io 
  #   http:
  #     paths:
  #     - path: /k8sdash
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: kubernetes-dashboard
  #           port:
  #             number: 80
